# skin-defaults-egami

./: Makefile.am  configure.ac  skin.xml  skin_default.xml
fonts/: Makefile.am
skin_default/: Makefile.am  skin_YouViX.xml  skin_YouViX_Enigma2-Plugins.xml  skin_YouViX_ExtPlugins.xml  skin_YouViX_OEA-Plugins.xml  skin_YouViX_Templates.xml  skin_YouViX_Wizards.xml
skin_default/buttons/: Makefile.am
skin_default/crossepg/: Makefile.am
skin_default/epg/: Makefile.am
skin_default/icons/: Makefile.am
skin_default/imdb/: Makefile.am
skin_default/infobar/: Makefile.am
skin_default/logos/: Makefile.am
skin_default/menuicons/: Makefile.am
skin_default/ondemand/: Makefile.am
skin_default/pvr/: Makefile.am
skin_default/screens/: Makefile.am
skin_default/selectionbars/: Makefile.am
skin_default/spinner/: Makefile.am
skin_default/vixcore/: Makefile.am
