installdir = /usr/share/enigma2/skin_default/epg

install_DATA = BorderBottom.png \
    BorderLeft.png \
    BorderRight.png \
    BorderTop.png \
    CurrentEvent.png \
    CurrentService.png \
	epgclock.png \
	epgclock_add.png \
	epgclock_autotimer.png \
	epgclock_post.png \
	epgclock_pre.png \
	epgclock_prepost.png \
	epgclock_zap.png \
	epgclock_zaprec.png \
    information.png \
    now_next_more_on.png \
    now_next_more.png \
    OtherEvent.png \
    OtherService.png \
    RecordEvent.png \
    SelectedBorderBottom.png \
    SelectedBorderLeft.png \
    SelectedBorderRight.png \
    SelectedBorderTop.png \
    SelectedCurrentEvent.png \
    SelectedEvent.png \
    SelectedInformation.png \
    SelectedRecordEvent.png \
    SelectedZapEvent.png \
	TimeLineDate.png \
    timeline-now-pig.png \
    timeline-now.png \
    TimeLineTime.png \
    ZapEvent.png