installdir = $(datadir)/enigma2/skin_default/infobar

dist_install_DATA = infobar.png \
    1stinfobar.png \
	2ndinfobar.png \
	2ndinfobareventinfo.png \
    event-info-bg.png \
    infobareventprogress.png \
    Mediaplayerbar_gray.png \
    Mediaplayerbar_purple.png \
    movie_infobar-bg.png \
	moviebar.png \
	movieprogressbar.png \
	movieprogressbar_background.png \
	quickepg.png \
    quickepg-infobbar.png \
    radio-infobar-bg.png \
    statusbar_bkgrd.png