installdir = $(datadir)/enigma2/skin_default/menuicons

dist_install_DATA = audio.png \
    cam.png \
    console.png \
	hdmicec.png \
    imdb.png \
    info.png \
	fan.png \
    fritz.png \
    languages.png \
    network.png \
    plugins.png \
	remotecontrol.png \
    ruya.png \
    setup.png \
    skins.png \
    softcam.png \
    timers.png \
    tuners.png \
    updates.png
