installdir = $(datadir)/enigma2/skin_default/pvr

dist_install_DATA = backward.png \
    backward_large.png \
    blank.png \
    forward.png \
    forward_large.png \
    pause.png \
    pause_large.png \
    play.png \
    play_large.png \
	rewind.png \
	slow.png \
	slow_large.png \
	stop.png \
	stop_large.png