installdir = $(datadir)/enigma2/skin_default/selectionbars

dist_install_DATA = activityslider.png \
    activitysliderbackground.png \
    MenuSelectionBar_H50x590.png \
    quickepg-selection.png \
    SelectionBar_H45x1160.png \
    SelectionBar_H50x545.png \
    SelectionBar_H50x590.png \
    SelectionBar_H50x620.png \
    SelectionBar_H50x750.png \
    SelectionBar_H50x1160.png \
	SelectionBar_H75x1160.png \
    SelectionBar_H80x1160.png \
    SelectionBar_H90x1160.png \
    SelectionBar_H100x1160.png